CICO-38558 adding comments

--- a/zest_station/partials_v2/checkout/zsEmailBill.html
+++ b/zest_station/partials_v2/checkout/zsEmailBill.html
@@ -98,7 +98,7 @@
         </nav>
     </div>
 </section>
-<!-- print option for overlay -->
+<!-- print option for overlay , for stand alone the print happens from bill screen -->
 <div ng-controller="zsPrintBillCtrl" ng-if="!zestStationData.is_standalone">
     <section id="main" role="main" class="centered" ng-show="printMode">
         <div id="content">
