CICO-38189 fixed on-screen keyboard covering the login button added Workstation out of order Reason to OOS screen + diagnostics adds Exit button for Electron

--- a/zest_station/partials_v2/zsDiagnostics.html
+++ b/zest_station/partials_v2/zsDiagnostics.html
@@ -21,6 +21,7 @@
     <span> [ {{zestStationData.refreshStationTimer}} >= {{zestStationData.timeUntilRefreshCheck}} ] Refresh Station Check Home Idle  <br> </span>
     <span> [ {{zestStationData.userInActivityTimeInSeconds}}/{{zestStationData.idlePopupTime}} ] Idle Time, Alert <span ng-show='zestStationData.idle_timer.enabled === "false"'>*disabled</span> <br> </span>
     <span> [ {{zestStationData.userInActivityTimeInSeconds}}/{{zestStationData.idleToHomeTime}} ]Idle Time, Back to Home <span ng-show='zestStationData.idle_timer.enabled === "false"'>*disabled</span></span>
+   
 </span>
 
 
@@ -28,7 +29,15 @@
 <!-- WORKSTATION + Encoding Info -->
 <span ng-show="zestStationData.timeDebugger == 'true'" class="timer-debugger-right dev-cls non-center">
      <br> <span>Assigned Workstation ({{zestStationData.workstationName}}) <br> </span>
+
+    <span ng-show='zestStationData.workstationStatus === "out-of-order"'> Out of Order Reason: 
+        <span ng-show='zestStationData.workstationOooReason.length > 0'>[ {{zestStationData.workstationOooReason}} ] </span>
+        <span ng-show='zestStationData.workstationOooReason.length == 0'>[ None ] </span>
+        <br>
+    </span>
+
      <span>Encoding Keys - <span ng-class='{"key-in-progress":zestStationData.makingKeyInProgress}'>({{zestStationData.makingKeyInProgress}})</span><br> </span>
+     
      <span ng-show='inChromeApp'>
         Zest Station Handler - <span ng-class='{"key-in-progress":zestStationData.stationHandlerConnectedStatus == "Not-Connected"}'>({{zestStationData.stationHandlerConnectedStatus}})</span><br> 
     </span>
