--- a/zest_station/partials_v2/zsJumpList.html
+++ b/zest_station/partials_v2/zsJumpList.html
@@ -18,7 +18,7 @@
 
             <h3 ng-show='!view.modes'>Find</h3>
 
-            <input id='jumperFilter' type='text' ng-model='jumperData.viewJumpFilter' placeholder='ie. Reservation Details'/>
+            <input id='jumperFilter' type='text' ng-model='jumperData.viewJumpFilter' placeholder='ie. Collect Email'/>
               
         </li>
     </ul>
@@ -63,7 +63,5 @@
             </p>
         </li>
     </ul>
-
-    <!--hr ng-show='view.modes'-->
 
 </div>
