--- a/zest_station/partials_v2/checkout/zsCheckOutOptions.html
+++ b/zest_station/partials_v2/checkout/zsCheckOutOptions.html
@@ -8,7 +8,8 @@
           <ul role="menu">
                 <li>
                     <button type="button" class="button option" touch-press="captureKey()">
-                        <div ng-include="icons.url.key"></div>
+                        <div ng-hide='theme === "duke"' ng-include="icons.url.key"></div>
+                        <div ng-show='theme === "duke"'  ng-include="icons.url.creditcard"></div>
                     </button>
                     <text editable-text="USE_KEY_CARD"> {{'USE_KEY_CARD' |translate}}</text>
                 </li>
