checking if property is overlay or not

--- a/zest_station/partials_v2/checkin/zsCheckinCCSwipe.html
+++ b/zest_station/partials_v2/checkin/zsCheckinCCSwipe.html
@@ -86,8 +86,8 @@
 
             </ul>
         </nav>
-        <h4 editable-text="CC_PLEASE_NOTE" ng-show="theme === 'yotel'">{{'CC_PLEASE_NOTE' |translate}}</h4>
-        <ul ng-show="theme === 'yotel'">
+        <h4 editable-text="CC_PLEASE_NOTE" ng-show="theme === 'yotel' && !zestStationData.is_standalone">{{'CC_PLEASE_NOTE' |translate}}</h4>
+        <ul ng-show="theme === 'yotel' && !zestStationData.is_standalone">
             <li editable-text="CC_INSTRUCTION_1">{{'CC_INSTRUCTION_1' |translate}}</li>
             <li editable-text="CC_INSTRUCTION_2">{{'CC_INSTRUCTION_2' |translate}}</li>
             <li editable-text="CC_INSTRUCTION_3">{{'CC_INSTRUCTION_3' |translate}}</li>
