CICO-37983 adds reservation details to Jumper, includes some dummy data to fill screen. + card swipe Updates - Reservation Details > Accompanying guests to only appear in Overlay properties

--- a/zest_station/partials_v2/checkin/zsCheckinReservationDetails.html
+++ b/zest_station/partials_v2/checkin/zsCheckinReservationDetails.html
@@ -22,9 +22,10 @@
                             </span>
                             {{selectedReservation.reservation_details.room_type_description}}
                         </p>
-                        <p ng-hide="{{selectedReservation.guest_details.length == 1}}">
+                        <p ng-hide="{{selectedReservation.guest_details.length == 1}} || zestStationData.is_standalone">
                             <text editable-text="ADDTL_RESIDENTS"> {{'ADDTL_RESIDENTS' |translate}}</text>
-                             ({{selectedReservation.guest_details.length-1}})</p>
+                             ({{selectedReservation.guest_details.length-1}})
+                         </p>
                         <button ng-if='zestStationData.kiosk_add_remove_guests' type="button" class="button" touch-press="addRemove()" >
                             <text editable-text="ADD_REMOVE_GUESTS"> {{'ADD_REMOVE_GUESTS' |translate}}</text>
                         </button>
